[gd_scene load_steps=4 format=3 uid="uid://phq02tc2lpsg"]

[ext_resource type="Script" uid="uid://63b5ec4ou05k" path="res://scenes/enemies/enemy_base.gd" id="1_satqt"]
[ext_resource type="PackedScene" uid="uid://qq0gjyel2fm6" path="res://scenes/life_timer/life_timer.tscn" id="2_qa0nx"]
[ext_resource type="PackedScene" uid="uid://d1uk0utxa7nyl" path="res://scenes/health_bar/health_bar.tscn" id="3_xdb20"]

[node name="EnemyBase" type="PathFollow2D"]
rotates = false
loop = false
script = ExtResource("1_satqt")

[node name="LifeTimer" parent="." instance=ExtResource("2_qa0nx")]
life_seconds = 30.0

[node name="Sound" type="AudioStreamPlayer2D" parent="."]

[node name="ExplosionPoints" type="Node2D" parent="."]

[node name="HealthBar" parent="." instance=ExtResource("3_xdb20")]

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
